--- a/templates/_layouts/topic.liquid
+++ b/templates/_layouts/topic.liquid
@@ -4,18 +4,8 @@ layout: base
 
 ---
 
-<header class="page-header">
-  <h2 class="title-one">
-    {{ page.title }}
-  </h2>
-  
-  <div class="page-caption size-xlarge">
-    <p>
-      Articles &amp; Guides published under
-      the topic {{ page.title }}.
-    </p>
-  </div>
-</header>
+{% assign brief = 'Articles & Guides published under the topic ' | append: page.title | append: '.' %}
+{% include page_header.liquid brief=brief %}
 
 {%
   include articles_listing_by_topic.liquid
