Remove or disable unused styles

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -68,27 +68,27 @@ hr {
 .brand-four { color: @brand-four; }
 .brand-five { color: @brand-five; }
 
-.fill-brand-one {
-    color: @brand-two;
-    background: @brand-one;
-    a { color: @brand-three; }
-}
-.fill-brand-two {
-    color: @brand-one;
-    background: @brand-two;
-}
-.fill-brand-three {
-    color: @brand-one;
-    background-color: @brand-three;
-}
-.fill-brand-four {
-    color: @brand-three;
-    background-color: @brand-four;
-}
-.fill-brand-five {
-    color: @brand-two;
-    background-color: @brand-five;
-}
+// .fill-brand-one {
+//     color: @brand-two;
+//     background: @brand-one;
+//     a { color: @brand-three; }
+// }
+// .fill-brand-two {
+//     color: @brand-one;
+//     background: @brand-two;
+// }
+// .fill-brand-three {
+//     color: @brand-one;
+//     background-color: @brand-three;
+// }
+// .fill-brand-four {
+//     color: @brand-three;
+//     background-color: @brand-four;
+// }
+// .fill-brand-five {
+//     color: @brand-two;
+//     background-color: @brand-five;
+// }
 
 
 
