--- a/templates/work.liquid
+++ b/templates/work.liquid
@@ -39,7 +39,16 @@ clients:
       -
         title: Expand existing infrastructure and applications used to deliver a country wide ad network based on raspberry Pi systems.
         tech:
-          - Python
+          - Python, MQTT, REST, UNIX
+  -
+    title: INBE
+    link: http://www.paisool.com
+    projects:
+      -
+        title: Creating the communication infrastructure for a mesh of P2P networked PoS devices.
+        tech:
+          - Python, C/C++, WebRTC, FFI
+
 
 foss:
   brief: |
@@ -51,10 +60,12 @@ foss:
   projects:
     - title: Command line invoice and timesheet management
       link: http://github.com/hamon-in/invoice
+      tech:
+        - Python
     - title: Low level port of the python psutil library.
       link: http://github.com/hamon-in/cpslib
       tech:
-        - Python
+        - C Python
   
   orgs:
     - title: Free Software Foundation
