Fixes about pages

--- a/templates/about.liquid
+++ b/templates/about.liquid
@@ -6,28 +6,31 @@ permalink: /about/
 title: About
 
 brief: |
-  This is Hamon in one line that is ideally
-  no more than 140 characters long.
+      What the computer can do, it should do. We make sure that it does.
 
 about:
   - 
     title: What we do
     body: |
-      The best infrastructure is invisible.  It does its work and stays
-      in the limelight while providing the foundation for customer facing
-      applications to run.  Good infrastructure leverages automation and
-      has makes the computer do most of the work leaving the people to
-      focus on the creative part of the enterprise. 
+      The best infrastructure is invisible.  It does its work and
+      stays out of the limelight while providing the foundation for
+      customer facing applications to run.  Good infrastructure
+      leverages automation and makes the computer do most of the
+      work leaving the people to focus on the creative part of the
+      enterprise.
       
       Hamon draws on its experience in automation and infrastructure to
       build custom solutions that allow our clients to automate critical
       parts of their infrastructure.
       
       #### Services
-      - Automation
-      - Web
-      - Infrastructure
-      - Python
+      - IoT device management
+      - Software lifecycle management
+      - Monitoring
+      - Analytics
+      - Devops automation
+      - Test automation
+
   -
     title: How we work
     body: |
@@ -55,40 +58,8 @@ team:
         nibrahim.net.in: http://nibrahim.net.in/
         Twitter: http://twitter.com/noufalibrahim
         GitHub: http://github.com/nibrahim/
-    -
-      name: Shamlik T
-      bio: |
-        Shamlik is an ardent programmer who always tries to write optimized code.
-        He is particularly interested in automation and IoT. He enjoys
-        organising tech. events and is an amateur photographer. He graduated
-        from MES college of engineering.
-    -
-      name: Suroor Hussain
-      bio: |
-        Suroor is an avid programmer and a lifelong learner. He enjoys coding in
-        python and is interested in cryptography and machine learning.
-        He completed his engineering degree from KMCT college of engineering
-        and in his free time, enjoys travelling.
-    -
-      name: Labeeb Ibrahim
-      bio: |
-        Labeeb is a passionate technologist, who believes in creating
-        secure and smart software/hardware platforms to ease human
-        life. Python is his strong pull and he has a thing for scientific
-        computing. He completed his Masters in Engineering from NITC. Outside
-        work, he contributes to open source and programming communities.
-    -
-      name: Mohammed Irfan
-      bio: |
-        Mohammed Irfan is a passionate programmer who believes in creating
-        optimised, robust and secure applications. He is proficient in Python,
-        C, Javascript and has created apps for the PC, web and Android.
-        He completed his bachelors in computer science engineering from AWH
-        engineering college. During his spare time, he enjoys playing video games,
-        contributing to open source and reading books.
 
 ---
-
 
 
 <ul>
