Updates contact information

--- a/templates/contact.liquid
+++ b/templates/contact.liquid
@@ -11,7 +11,7 @@ brief: |
 
 contact:
   Email: |
-    <hello@hamon.in>
+    <contact@hamon.in>
   
   Twitter: |
     [@hamon_in](https://twitter.com/hamon_in)
@@ -19,12 +19,12 @@ contact:
   Phone: |
     [+91 956-709-1835](tel:+919567091835)
   
-  Address: |
-    #29 Al-Riyaz  
-    Pipeline road  
-    Patteri, Kozhikode  
-    Kerala - 673016  
-    India
+  # Address: |
+  #   #29 Al-Riyaz  
+  #   Pipeline road  
+  #   Patteri, Kozhikode  
+  #   Kerala - 673016  
+  #   India
 
 ---
 
