Updates main index

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -4,7 +4,7 @@ layout: base
 body: |
   HAMON develops cutting edge software built on solid foundations. We deliver reliable solutions with predictable schedules. Our team has over a decade of experience in the industry.
   
-  We work in the infrastructure, automation and web domains and specialise in the Python stack.
+  We specialise in IoT infrastructure, device management and automation.
 
 email: contact@hamon.in
 
