--- a/templates/lycaeum.liquid
+++ b/templates/lycaeum.liquid
@@ -20,7 +20,7 @@ body: |
   Lycaeum on a regular basis. 
   
   If you're a college student or a fresher and interested in working
-  at Hamon, please enroll for the [mentoring course](link) conducted
+  at Hamon, please enroll for the [mentoring course](http://thelycaeum.in/courses.html) conducted
   regulary at The Lycaeum.
   
   For more information about The Lycaeum please visit
