--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -3,11 +3,11 @@ layout: html
 
 nav:
   Home:         /
+  Services:     /services/
   Work:         /work/
-  About:        /about/
-  Articles:     /articles/
+  Team:         /team/
+  Culture:      /culture/
   Contact:      /contact/
-  The Lycaeum:  /lycaeum/
 
 social:
   github:       https://github.com/hamon-in
