--- a/templates/contact.liquid
+++ b/templates/contact.liquid
@@ -19,12 +19,13 @@ contact:
   Phone: |
     [+91 956-709-1835](tel:+919567091835)
   
-  # Address: |
-  #   #29 Al-Riyaz  
-  #   Pipeline road  
-  #   Patteri, Kozhikode  
-  #   Kerala - 673016  
-  #   India
+  Address: |
+    Hamon Technologies,
+    2nd Floor, Behind MIMS Hospital
+    Govindapuram, 
+    Kozhikode district
+    Kerala, India
+    Pin - 673016
 
 ---
 
