--- a/templates/services.liquid
+++ b/templates/services.liquid
@@ -10,7 +10,7 @@ brief: |
 body: |
   We specialize in AI/ML, Cloud, and Automation technologies. We also provide technology advisory to design and architect solutions and also improve internal engineering processes and workflows.
 
-  #### Our services
+  #### What we do
   - AI/ML
     - Data analysis and pre-processing
     - Standard machine learning and deep learning
@@ -28,6 +28,12 @@ body: |
       - Software development best practices
       - Scalable software architecture
       - CTO as a service
+
+  #### How we work
+  We do agile to make sure you get stuff done quickly.
+
+  #### Who we work with
+  
 
 ---
 
