--- a/templates/work.liquid
+++ b/templates/work.liquid
@@ -5,8 +5,7 @@ permalink: /work/
 title: Work
 
 brief: |
-  A selection of our projects and clients in the infrastructure,
-  automation and web domains.
+   People we've worked with       
 
 clients:
   -
