Fixes services page

--- a/templates/services.liquid
+++ b/templates/services.liquid
@@ -30,10 +30,21 @@ body: |
       - CTO as a service
 
   #### How we work
-  We do agile to make sure you get stuff done quickly.
+  We start our projects with an initial inception meeting. We use this to understand the scope of the project and to estimate effort, resources and timelines. After this, we work in weekly iterations with constant communication so that our clients are aware of the project status at all times. A regular meeting with the client at the beginning of each iteration allows us to course correct if necessary and keep the effort focussed on delivering maximum value.
+
+  We have refined our processes over our projects and have delivered maximum value for our clients.
 
   #### Who we work with
-  
+  We work primarily with two types of clients. 
+
+     - Funded early stage startups
+       - Initial technology and process architecture - So that the engineering foundations for your company are strong and can support fast growth.
+       - Quick prototyping - So that you get a working product or MVP as quickly as possible which you can release into the wild.
+       - Product development and testing - So that you get your product built within time and budget with proper QA.
+       - Devops and infrastructure - So that your product can deliver real world results and handle real world traffic
+       
+     - Enterprises which require niche expertise
+       Many times, enterprises might not have in house experts on niche high value areas. We help them fill the gap with our highly skilled professionals. This allows our enterprise clients to create quick prototypes and deliver the MVP for customer validation. We provide product development and testing for our clients to help convert raw ideas into working and useful products. We also help our clients to integrate these products with their internal tools to maximise their value.
 
 ---
 
